fix the nav comp z-index

--- a/src/home/home.less
+++ b/src/home/home.less
@@ -9,6 +9,7 @@
     color: #fff;
     background-color: #383b45;
     text-align: center;
+    z-index: 99;
     a{
         color: #fff;
     }
